see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Jun-2010 Mark Dexter
# Beez template fixes (Angie Radke)

21-Jun-2010 Jean-Marie Simonet
[#21020] Ordering of weblinks does not work as expected. Thanks Omar.
[#21116] [patch] Update Hathor with the new saveorder icon behavior. Thanks Andrea.
[#21064] Login redirection not functioning. Thanks Omar.
[#21120] Article Button in Editor missing left side in Milkyway. Thanks Marijke
[#21057] Mistyped template name in joomla data. Thanks Christophe.
[#20725] System Path Disclosure
[#21037] Two similar options in Module Latest News. Thanks Christophe and Stephania. + string
[#21061] Fatal error when "Show Title" is set to "No". Thanks Omar.
[#20945] email error when creating a new user. Thanks Elin.
[#21059] Image selector layout problems. Thanks Omar.
[#20837] Deleting usergroup that have been assigned to access levels does not remove them from the #__viewlevels table. Thanks Christophe.
[#21081] [patch] URL not required when submitting weblink. Thanks Michael.
[#20695] Parameter merge for contacts categories view is not working. Thanks Bill.

21-Jun-2010 Christophe Demko
 # Fixed issue [#20786] com_users - no frontend_userparams
 # Fixed issue [#21118] Thumbnails not showing on frontend in Popup

20-Jun-2010 Mark Dexter
# [#20781] [patch] Remove deprecated attribute language from all occurrences of the tag script
# [#20989] input elements must be nested in a block level tag
# [#21119] [patch] Passwords displayed as plain text in Global Config
# [#20875] Error in css beez template

20-Jun-2010 Christophe Demko
 # Correcting a small issue in JHtmlJGrid

20-Jun-2010 Jean-Marie Simonet